--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.7",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "firebase": "^10.1.0",
     "next": "13.4.9",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
