--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "firebase": "^10.1.0",
+    "i18next": "^23.4.1",
     "next": "13.4.9",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^13.0.3",
     "typescript": "5.1.6"
   }
 }
