--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-apiKey: "",
-authDomain: "project-id.firebaseapp.com",
-databaseURL: "https://project-id.firebaseio.com",
-projectId: "project-id",
-storageBucket: "project-id.appspot.com",
-messagingSenderId: "",
-appId: "",
+NEXT_PUBLIC_FIREBASE_API_KEY: ""
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN: "project-id.firebaseapp.com"
+NEXT_PUBLIC_FIREBASE_DATABASE_URL: "https://project-id.firebaseio.com"
+NEXT_PUBLIC_FIREBASE_PROJECT_ID: "project-id"
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET: "project-id.appspot.com"
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID: ""
+NEXT_PUBLIC_FIREBASE_APP_ID: ""
