--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ NEXT_PUBLIC_FIREBASE_PROJECT_ID: "project-id"
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET: "project-id.appspot.com"
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID: ""
 NEXT_PUBLIC_FIREBASE_APP_ID: ""
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=secret
