--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^10.1.0",
     "i18next": "^23.4.1",
     "next": "13.4.9",
+    "next-auth": "^4.22.3",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
