--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "eslint-config-next": "13.4.9",
     "firebase": "^10.1.0",
     "i18next": "^23.4.1",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-http-backend": "^2.2.1",
     "next": "13.4.9",
     "next-auth": "^4.22.3",
+    "next-i18next": "^14.0.0",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
